--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -48,7 +48,10 @@
   <ItemGroup>
     <Compile Include="Action.cs" />
     <Compile Include="BlurFilter.cs" />
-    <Compile Include="Filter.cs" />
+    <Compile Include="Closing.cs" />
+    <Compile Include="Dilatation.cs" />
+    <Compile Include="Erosion.cs" />
+    <Compile Include="Filters.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,13 +60,19 @@
     </Compile>
     <Compile Include="GaussianFilter.cs" />
     <Compile Include="GlassFilter.cs" />
+    <Compile Include="Grad.cs" />
     <Compile Include="GrayScaleFilter.cs" />
+    <Compile Include="GrayWorld.cs" />
     <Compile Include="IncreaseLuminanceFilter.cs" />
     <Compile Include="IncreaseSharpnessFilter.cs" />
     <Compile Include="InvertFilter.cs" />
     <Compile Include="LinearExtension.cs" />
     <Compile Include="MatrixFilter.cs" />
     <Compile Include="MedianBlur.cs" />
+    <Compile Include="Morphological.cs" />
+    <Compile Include="MultiFilter.cs" />
+    <Compile Include="Opening.cs" />
+    <Compile Include="PerfectReflector.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SepiaFilter.cs" />
